// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profile/> Renders the <Profile/> with populated data 1`] = `
<div
  class="profiles__Container-bxtkkv-0 eJHeUh"
>
  <h1
    class="profiles__Title-bxtkkv-1 gEhjfN"
  >
    Who's watching
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 ibPFSe"
  >
    <li
      class="profiles__Item-bxtkkv-5 fVboEs"
    >
      <img
        class="profiles__Picture-bxtkkv-4 jOhiSx"
        data-testid="profile-picture"
        src="/images/users/images/karl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-3 bLwqOe"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profile/> Renders the <Profile/> with populated data bus misc profile image 1`] = `
<div
  class="profiles__Container-bxtkkv-0 eJHeUh"
>
  <h1
    class="profiles__Title-bxtkkv-1 gEhjfN"
  >
    Who's watching
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 ibPFSe"
  >
    <li
      class="profiles__Item-bxtkkv-5 fVboEs"
    >
      <img
        class="profiles__Picture-bxtkkv-4 jOhiSx"
        data-testid="profile-picture-misc"
        src="/images/users/images/karl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-3 bLwqOe"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
